[gd_scene load_steps=4 format=3 uid="uid://bc8ypnf7van0b"]

[ext_resource type="Script" uid="uid://pa1cn1xfgel2" path="res://title_scene.gd" id="1_wkkv4"]
[ext_resource type="Script" uid="uid://dfi5ekgw1fvcy" path="res://signal_server.gd" id="2_176dl"]

[sub_resource type="LabelSettings" id="LabelSettings_j1uka"]
font_size = 36

[node name="HomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wkkv4")

[node name="JoinPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 424.0
offset_top = 356.0
offset_right = 733.0
offset_bottom = 495.0

[node name="Join" type="Button" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 88.5
offset_top = 28.5
offset_right = 142.5
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Join"

[node name="TableIDLabel" type="Label" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -14.5
offset_right = 125.0
offset_bottom = 16.5
grow_vertical = 2
text = "Table ID: "
vertical_alignment = 1

[node name="TableID" type="LineEdit" parent="JoinPanel"]
layout_mode = 0
offset_left = 130.0
offset_top = 54.5
offset_right = 297.0
offset_bottom = 85.5
placeholder_text = "Table ID"
max_length = 32

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 38.0
offset_right = 20.0
offset_bottom = 61.0
grow_horizontal = 2
text = "Dice and Friends"
label_settings = SubResource("LabelSettings_j1uka")
horizontal_alignment = 1

[node name="HostGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -15.5
offset_right = 47.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Host Table"

[node name="JoinGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = 42.0
offset_right = 47.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
text = "Join Table"

[node name="SelectName" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -70.0
offset_right = 145.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SelectName"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -15.0
offset_right = 120.0
offset_bottom = 8.0
grow_vertical = 2
text = "Select Name: "

[node name="Name" type="LineEdit" parent="SelectName"]
layout_mode = 0
offset_left = 130.0
offset_top = 4.0
offset_right = 297.0
offset_bottom = 35.0
text = "Player"
max_length = 32

[node name="SignalServer" type="Node" parent="."]
script = ExtResource("2_176dl")
metadata/_custom_type_script = "uid://dfi5ekgw1fvcy"

[connection signal="pressed" from="JoinPanel/Join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="JoinPanel/TableID" to="." method="_on_table_id_text_changed"]
[connection signal="text_submitted" from="JoinPanel/TableID" to="." method="_on_join_pressed" unbinds=1]
[connection signal="pressed" from="HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="JoinGame" to="." method="_on_join_game_pressed"]
